Fix visual quirks on Firefox and Safari
It turns out that only minor tweaks were required for that. It's annoying that browsers have different default values for properties such as button margins.

Nuked some OpenLayers-related CSS that is no longer needed now that we've upgraded to 4.X.

--- a/tds/src/main/webapp/style/ncss/main.css
+++ b/tds/src/main/webapp/style/ncss/main.css
@@ -91,6 +91,7 @@ button {
     cursor: pointer;
     outline: none;
     padding: 6px;
+    margin: 0;
 
     transition: 0.3s;  /* Determines the speed of the "hover" effect. */
     border: 1px solid transparent;  /* This border will be made opaque in "button:active". */
