--- a/tds/src/main/webapp/style/ncss/sidebar.css
+++ b/tds/src/main/webapp/style/ncss/sidebar.css
@@ -24,21 +24,9 @@
 #map {
 	width: 300px;
 	height: 180px;
-
-	/*
-		When we attach the map to this element, OpenLayers adds the "olMap" class to it, which is defined like so:
-			div.olMap {
-				z-index: 0;
-				padding: 0 !important;
-				margin: 0 !important;
-				cursor: default;
-			}
-		This overrides the margin-bottom we set in ".sidebar > div". We want it back.
-		See https://stackoverflow.com/questions/11178673/how-to-override-important.
-	 */
-	margin: 4px 0 1em 0 !important;
 }
 
+/* Provides layout and style for the mouse position text that appears in the bottom-right of the OpenLayers map. */
 .olControlMousePosition {
     bottom: 0;
     right: 3px;
@@ -81,7 +69,7 @@
 			'. . bottomLabel . .';
 	grid-template-columns: min-content 1fr 1fr 1fr min-content;
 	grid-gap: 2px;
-	align-items: baseline;
+	align-items: center;
 }
 
 .boundingBoxGrid input[type=text] {
@@ -106,11 +94,13 @@
 .leftLabel {
 	grid-area: leftLabel;
 	text-align: right;
+	padding-right: 2px;
 }
 
 .rightLabel {
 	grid-area: rightLabel;
 	text-align: left;
+	padding-left: 2px;
 }
 
 .bottomLabel {
@@ -132,7 +122,7 @@
 	grid-template-columns: min-content min-content;
 	grid-gap: 4px;
 	justify-items: start;
-	align-items: baseline;
+	align-items: center;
 }
 
 /* Meant to be use together with verticalInputBoxesGrid. */
